--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,16 +25,19 @@ jobs:
         restore-keys: |
           docker-buildkit-
 
+    - name: Login to Docker Hub
+      run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Build and push Docker image
       id: docker-build
       env:
         IMAGE_TAG: ${{ github.sha }}
+        IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/my-app
       run: |
-        docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
         docker buildx build --push \
           --cache-from type=local,dest=/tmp/.docker-buildkit \
           --cache-to type=local,dest=/tmp/.docker-buildkit \
-          -t ${{ secrets.DOCKERHUB_USERNAME }}/my-app:${IMAGE_TAG} .
+          -t ${{ env.IMAGE_NAME }}:${IMAGE_TAG} .
 
     - name: Image digest
       run: echo "Image digest:${{ steps.docker-build.outputs.digest }}"
