--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,14 +28,14 @@ jobs:
     - name: Login to Docker Hub  # Use the official Docker Login Action
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }} # Use token instead of password
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }} # Use token instead of password
 
     - name: Build and push Docker image
       id: docker-build
       env:
         IMAGE_TAG: ${{ github.sha }}
-        IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/my-app
+        IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/my-app
       run: |
         docker buildx build --push \
           --cache-from type=local,dest=/tmp/.docker-buildkit \
