--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
     - name: Set up Docker Buildx
       id: buildx
       uses: docker/setup-buildx-action@v2
+      with:
+        driver-opts: image=moby/buildkit:v0.12.5 # Recommend setting a version for stability
 
     - name: Cache Docker layers
       uses: actions/cache@v3
@@ -38,8 +40,9 @@ jobs:
         IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/my-app
       run: |
         docker buildx build --push \
+          --platform linux/amd64 \ # Added platform
           --cache-from type=local,dest=/tmp/.docker-buildkit \
-          --cache-to type=local,dest=/tmp/.docker-buildkit \
+          --cache-to type=local,dest=/tmp/.docker-buildkit,mode=max \ # Added mode=max
           -t ${{ env.IMAGE_NAME }}:${IMAGE_TAG} .
 
     - name: Image digest
