--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,49 +1,59 @@
-name: Docker Image CI
+name: CI/CD - Iris Classification Service
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v2
-      with:
-        driver-opts: image=moby/buildkit:v0.12.5 # Recommend setting a version for stability
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
 
-    - name: Cache Docker layers
-      uses: actions/cache@v3
-      with:
-        path: /tmp/.docker-buildkit
-        key: docker-buildkit-${{ github.sha }}
-        restore-keys: |
-          docker-buildkit-
+      - name: Install dependencies
+        run: |
+          pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r api/requirements.txt
+          pip install -r model/requirements.txt
 
-    - name: Login to Docker Hub  # Use the official Docker Login Action
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }} # Use token instead of password
+      - name: Lint with flake8
+        run: |
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-    - name: Build and push Docker image
-      id: docker-build
-      env:
-        IMAGE_TAG: ${{ github.sha }}
-        IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/my-app
-      run: |
-        docker buildx build --push \
-          --platform linux/amd64 \ # Added platform
-          --cache-from type=local,dest=/tmp/.docker-buildkit \
-          --cache-to type=local,dest=/tmp/.docker-buildkit,mode=max \ # Added mode=max
-          -t ${{ env.IMAGE_NAME }}:${IMAGE_TAG} .
+      - name: Test with pytest
+        run: |
+          pytest api/test_api.py
 
-    - name: Image digest
-      run: echo "Image digest:${{ steps.docker-build.outputs.digest }}"
+      - name: Build the Docker image
+        run: docker-compose build
+
+      - name: Test the Docker image (optional)
+        run: |
+          docker-compose up -d
+          sleep 10 # Дать время контейнерам запуститься
+          # Добавьте здесь тесты для проверки работоспособности API в контейнере
+          # Например, отправьте запрос к /docs и проверьте ответ
+          docker-compose down
+
+      - name: Log in to Docker Hub (optional)
+        if: ${{ secrets.DOCKER_USERNAME && secrets.DOCKER_PASSWORD }}
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push the Docker image to Docker Hub (optional)
+        if: ${{ secrets.DOCKER_USERNAME && secrets.DOCKER_PASSWORD }}
+        run: |
+          IMAGE_ID=$(docker-compose config --property services.fastapi.image)
+          IMAGE_ID=$(echo "$IMAGE_ID" | tr -d '"') 
+          IMAGE_TAG=latest
+          docker tag $IMAGE_ID ${{ secrets.DOCKER_USERNAME }}/iris-classification-fastapi:$IMAGE_TAG
+          docker push ${{ secrets.DOCKER_USERNAME }}/iris-classification-fastapi:$IMAGE_TAG
