--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,49 +1,38 @@
-name: Docker Image CI
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v2
-      with:
-        driver-opts: image=moby/buildkit:v0.12.5 # Recommend setting a version for stability
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Cache Docker layers
-      uses: actions/cache@v3
-      with:
-        path: /tmp/.docker-buildkit
-        key: docker-buildkit-${{ github.sha }}
-        restore-keys: |
-          docker-buildkit-
+      - name: Login to Docker Hub (or your registry)
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }} # Or use a different secret
 
-    - name: Login to Docker Hub  # Use the official Docker Login Action
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }} # Use token instead of password
+      - name: Generate Image Tag
+        id: image_tag
+        run: |
+          echo "::set-output name=TAG::$(git rev-parse --short HEAD)"
 
-    - name: Build and push Docker image
-      id: docker-build
-      env:
-        IMAGE_TAG: ${{ github.sha }}
-        IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/my-app
-      run: |
-        docker buildx build --push \
-          --platform linux/amd64 \ # Added platform
-          --cache-from type=local,dest=/tmp/.docker-buildkit \
-          --cache-to type=local,dest=/tmp/.docker-buildkit,mode=max \ # Added mode=max
-          -t ${{ env.IMAGE_NAME }}:${IMAGE_TAG} .
+      - name: Build and Push Docker Image
+        run: |
+          export IMAGE_TAG=${{ steps.image_tag.outputs.TAG }}
+          docker buildx build --push \
+            --platform linux/amd64 \
+            --cache-from type=local,dest=/tmp/.docker-buildkit \
+            --cache-to type=local,dest=/tmp/.docker-buildkit,mode=max \
+            -t yourusername/your-app:${IMAGE_TAG} .
 
-    - name: Image digest
-      run: echo "Image digest:${{ steps.docker-build.outputs.digest }}"
