--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           export IMAGE_TAG=${{ steps.image_tag.outputs.TAG }}
           docker buildx build --push \
             --platform linux/amd64 \
-            --cache-from type=local,dest=/tmp/.docker-buildkit \
+            --cache-from type=local,src=/tmp/.docker-buildkit \
             --cache-to type=local,dest=/tmp/.docker-buildkit,mode=max \
             -t yourusername/your-app:${IMAGE_TAG} .
 
