--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,26 +13,27 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
-        id: buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to Docker Hub (or your registry)
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }} # Or use a different secret
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Generate Image Tag
         id: image_tag
         run: |
-          echo "::set-output name=TAG::$(git rev-parse --short HEAD)"
+          echo "TAG=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
       - name: Build and Push Docker Image
+        env:
+          IMAGE_TAG: ${{ steps.image_tag.outputs.TAG }}
         run: |
-          export IMAGE_TAG=${{ steps.image_tag.outputs.TAG }}
           docker buildx build --push \
             --platform linux/amd64 \
             --cache-from type=local,src=/tmp/.docker-buildkit \
             --cache-to type=local,dest=/tmp/.docker-buildkit,mode=max \
             -t yourusername/your-app:${IMAGE_TAG} .
+
 
